# SaveData

clientSaveData/build-clientSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
clientSaveData/build-clientSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/clientSaveData_autogen/: deps  moc_predefs.h
clientSaveData/build-clientSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/clientSaveData_autogen/6YEA5652QU/: moc_ClientData.cpp  moc_ClientData.cpp.d
clientSaveData/build-clientSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/serverSaveData_autogen/: deps  mocs_compilation.cpp
clientSaveData/build-clientSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/serverSaveData_autogen/6YEA5652QU/: moc_ClientData.cpp  moc_ClientData.cpp.d
clientSaveData/clientSaveData/: CMakeLists.txt  CMakeLists.txt.user.3f6098d
clientSaveData/clientSaveData/include/: ClientData.h
clientSaveData/clientSaveData/src/: ClientData.cpp  Commands.cpp  main.cpp
serverSaveData/build-serverSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
serverSaveData/build-serverSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/serverSaveData_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
serverSaveData/build-serverSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/serverSaveData_autogen/6YEA5652QU/: moc_Server.cpp  moc_Server.cpp.d  moc_ServerData.cpp  moc_ServerData.cpp.d
serverSaveData/build-serverSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/serverSaveData_autogen/KRHXW7JQHD/: moc_testConstrInit.cpp  moc_testConstrInit.cpp.d
serverSaveData/build-serverSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/tables/: people.sddb
serverSaveData/build-serverSaveData-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/tables/Liliput Genadiy/: types.entry  (+2 more)
serverSaveData/serverSaveData/: CMakeLists.txt
serverSaveData/serverSaveData/include/: Server.h  ServerData.h  StreamTable.h
serverSaveData/serverSaveData/src/: Server.cpp  ServerData.cpp  main.cpp
(+71 files in other folders)
